# Langchain_Learning_Series

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  template.json  test.ipynb  test.py  user_data.csv
1.LLMs/: README.md  _llm_demo.py
10.Text-Splitters/: README.md  code_based.py  length_based.py  markdown_based.py  semantic_meaning_based.py  text_structure_based.py
11.vector-store/: README.md  langchain-chroma.ipynb
12.Retrievers/: README.md  compression-contextual-retriever.ipynb  langchain-retriever.ipynb  multi-query-retriever.ipynb  vector-store-retriever.ipynb
2.ChatModels/: README.md  _chatmodel_gemini.py  _chatmodel_groq.py  _chatmodel_hf_api.py  _chatmodel_hf_local.py
3.EmbeddingModels/: README.md  _document_similariity.py  _embedding_gemini_query.py  _embedding_hf_local.py  _embedding_openai_docs.py  _embedding_openai_query.py
4.Prompts/: README.md  prompt_generator.py  prompt_ui.py
5.Structured-Output/: README.md  json_schema.json  pydantic_demo.ipynb  pydantic_with_structured.ipynb  typeddict_demo.ipynb  with_structured_output_json.ipynb
6.Output-parsers/: JsonOutputParser.py  Pydantic.ipynb  PydanticOutputParser.py  README.md  StructuredOutputParser.py.py  stroutputparser.py  stroutputparser1.py
7.Chains/: README.md  conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
8.Runnables/: README.md  langchain-aam-zindagi.ipynb  langchain-mentos-zindagi.ipynb  runable_passthrough.py  runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_sequence.py
9.Document-Loaders/: README.md  (+6 more)
(+18 files in other folders)
